force-app/main/default/objects/SG_Contact_Manual__c/SG_Contact_Manual__c.object-meta.xml
<CustomObject>
    <label>SG Contact Manual</label>
    <nameField>
        <label>SG Contact Manual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SG Contact Manuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>