force-app/main/default/objects/SG_Contact_Manual__c/fields/Addr_Region__c.field-meta.xml
<CustomField>
    <fullName>Addr_Region__c</fullName>
    <label>Addr_Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>