force-app/main/default/objects/SG_Contact_Manual__c/fields/Addr_StateOrProvince__c.field-meta.xml
<CustomField>
    <fullName>Addr_StateOrProvince__c</fullName>
    <label>Addr_StateOrProvince</label>
    <length>255</length>
    <type>Text</type>
</CustomField>