force-app/main/default/objects/SG_Contact_Manual__c/fields/Addr_StreetLine1__c.field-meta.xml
<CustomField>
    <fullName>Addr_StreetLine1__c</fullName>
    <label>Addr_StreetLine1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>