force-app/main/default/objects/SG_Contact_Manual__c/fields/Addr_UnitNumber__c.field-meta.xml
<CustomField>
    <fullName>Addr_UnitNumber__c</fullName>
    <label>Addr_UnitNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>