force-app/main/default/objects/SG_Contact_Manual__c/fields/Addr_Ward__c.field-meta.xml
<CustomField>
    <fullName>Addr_Ward__c</fullName>
    <label>Addr_Ward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>