force-app/main/default/objects/SG_Contact_Manual__c/fields/BR_CurrentBrandID__c.field-meta.xml
<CustomField>
    <fullName>BR_CurrentBrandID__c</fullName>
    <label>BR_CurrentBrandID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>