force-app/main/default/objects/SG_Contact_Manual__c/fields/BR_PurchasedBrand__c.field-meta.xml
<CustomField>
    <fullName>BR_PurchasedBrand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BR_PurchasedBrand</label>
    <type>Checkbox</type>
</CustomField>