force-app/main/default/objects/SG_Contact_Manual__c/fields/Child_DOB__c.field-meta.xml
<CustomField>
    <fullName>Child_DOB__c</fullName>
    <label>Child_DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>