force-app/main/default/objects/SG_Contact_Manual__c/fields/Child_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Child_FirstName__c</fullName>
    <label>Child_FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>