force-app/main/default/objects/SG_Contact_Manual__c/fields/Child_Gender__c.field-meta.xml
<CustomField>
    <fullName>Child_Gender__c</fullName>
    <label>Child_Gender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>