force-app/main/default/objects/SG_Contact_Manual__c/fields/Contact_DOB__c.field-meta.xml
<CustomField>
    <fullName>Contact_DOB__c</fullName>
    <label>Contact_DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>