force-app/main/default/objects/SG_Contact_Manual__c/fields/Contact_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Contact_Ethnicity__c</fullName>
    <label>Contact_Ethnicity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>