force-app/main/default/objects/SG_Contact_Manual__c/fields/Contact_HomePhone__c.field-meta.xml
<CustomField>
    <fullName>Contact_HomePhone__c</fullName>
    <label>Contact_HomePhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>