force-app/main/default/objects/SG_Contact_Manual__c/fields/Contact_NationalID__c.field-meta.xml
<CustomField>
    <fullName>Contact_NationalID__c</fullName>
    <label>Contact_NationalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>