force-app/main/default/objects/SG_Contact_Manual__c/fields/Contact_OverallChildNeed__c.field-meta.xml
<CustomField>
    <fullName>Contact_OverallChildNeed__c</fullName>
    <label>Contact_OverallChildNeed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>