force-app/main/default/objects/SG_Contact_Manual__c/fields/Contact_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Salutation__c</fullName>
    <label>Contact_Salutation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>