force-app/main/default/objects/SG_Contact_Manual__c/fields/CR_CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CR_CampaignName__c</fullName>
    <label>CR_CampaignName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>