force-app/main/default/objects/SG_Contact_Manual__c/fields/CR_EndOfAlwaysOnJourney__c.field-meta.xml
<CustomField>
    <fullName>CR_EndOfAlwaysOnJourney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CR_EndOfAlwaysOnJourney</label>
    <type>Checkbox</type>
</CustomField>