force-app/main/default/objects/SG_Contact_Manual__c/fields/CR_PromoterName__c.field-meta.xml
<CustomField>
    <fullName>CR_PromoterName__c</fullName>
    <label>CR_PromoterName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>