force-app/main/default/objects/SG_Contact_Manual__c/fields/CR_SampleGiven__c.field-meta.xml
<CustomField>
    <fullName>CR_SampleGiven__c</fullName>
    <label>CR_SampleGiven</label>
    <length>50</length>
    <type>Text</type>
</CustomField>