force-app/main/default/objects/SG_Contact_Manual__c/fields/CR_SupervisorCode__c.field-meta.xml
<CustomField>
    <fullName>CR_SupervisorCode__c</fullName>
    <label>CR_SupervisorCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>