force-app/main/default/objects/SG_Contact_Manual__c/fields/CR_UTMSource__c.field-meta.xml
<CustomField>
    <fullName>CR_UTMSource__c</fullName>
    <label>CR_UTMSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>