force-app/main/default/objects/SG_Contact_Manual__c/fields/CR_UTMString__c.field-meta.xml
<CustomField>
    <fullName>CR_UTMString__c</fullName>
    <label>CR_UTMString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>